--- a/index.html
+++ b/index.html
@@ -51,19 +51,23 @@
                     <div class="group-idade mb-4 text-lg text-white">
                         <div class="input-idade flex justify-between">
                             <label>Objetivo: </label>
-                            <select class="rounded opacity-80 max-w-[200px] pl-2 bg-[#08AEEA] border text-base font-normal" name="nv-atividade" id="id_nv_atividade" >
-                                <option value="Sedentário" selected></option>
-                                <option value="Levemente ativo">Levemente ativo (exercício leve 1 a 3 dias por semana) </option>
-                                <option value="Moderadamente ativo">Moderadamente ativo (exercício moderado, faz esportes 3 a 5 dias por semana)</option>
-                                <option value="Altamente ativo">Altamente ativo (exercício pesado de 5 a 6 dias por semana)</option>
-                                <option value="Extremamente ativo">Extremamente ativo (exercício pesado diariamente e até 2 vezes por dia)</option>
+                            <select class="rounded opacity-80 max-w-[200px] pl-2 bg-[#08AEEA] border text-base font-normal" name="objetivo" id="id_objetivo" >
+                                <option value="Emagrecer" selected>Emagrecer</option>
+                                <option value="Manter o peso">Manter o peso</option>
+                                <option value="Ganhar peso(Massa muscular)">Ganhar peso(Massa muscular)</option>
                             </select>
                         </div>
                     </div>
-                    <div class="group-button flex justify-end">
+                    <div class="group-button flex justify-end mb-6">
                         <button class="btn px-5 py-3 border shadow-2xl rounded-lg bg-blue-900 text-white hover:bg-purple hover:rounded-3xl transition-all duration-300" type="submit">Calcular</button>
                     </div>
                 </form>
+                <h2 class="hidden text-lg text-yellow-300">Quantidade de calorias a serem ingeridas:</h2>
+                <p class="total-calorias text-xl text-yellow-300 font-bold mb-6"></p>
+                <h3 class="hidden text-lg text-yellow-300">Macro nutrientes</h3>
+                <p class="total-protein hidden text-lg">Proteinas: <span class="font-bold text-blue-900"></span></p>
+                <p class="total-carbo hidden text-lg">Carboidratos: <span class="font-bold text-blue-900"></span></p>
+                <p class="total-fat hidden text-lg">Gorduras: <span class="font-bold text-blue-900"></span></p>
             </div>
         </div>
     </section>
